# aws-websocket-app

./: .gitignore  README.md  cdk.json  chart.drawio  package-lock.json  package.json  pyproject.toml
app/: package-lock.json  package.json
app/src/: App.vue
lambda/: app.py  constants.py  dynamo.ts  handlers.py  index.ts  queue-event.ts
lib/: apigw-app-stack.ts  aws-websocket-app-stack.ts
python_src/: models.py
test/: aws-websocket-app.test.ts
