[tool.poetry]
name = "aws-websocket-app"
version = "0.1.0"
description = ""
authors = ["Yoshitaka motomura <stay.daybreak@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.34.132"
pydantic = "^2.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
